--- a/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/memoprogramcomponentdetails.css
+++ b/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/memoprogramcomponentdetails.css
@@ -84,8 +84,11 @@
   }
 
   .pdf-content {
-      width: 100%;
+      width: 850px;
       height: 1075px;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
   }
 
   .block-new {
