update resource files add selfrection link to planning add evaluation link to planning

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/DisplayTemplates/ProgramComponent.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/DisplayTemplates/ProgramComponent.cshtml
@@ -13,9 +13,24 @@
                 {
                     @Html.Raw("- ") @Html.DisplayFor(m => Model.Assessors)
                 }
+
+                if (Model.Title == "Evaluation Form")
+                {
+                    if (TempData["Location"].ToString() == "Online")
+                    {
+                        @Localizer["OnlineEvaluation"]
+                    }
+                    else
+                    {
+                        @Localizer["OfficeEvaluation"]
+                    }
+                }
+
+                if (Model.Title.Contains("Self reflection"))
+                {
+                    @Html.Raw(String.Format(Localizer["SelfReflection"].Value, Model.Id))
+                }
             }
-
-
         </p>
 
         @if (Model.ShowDetailsLink)
