Fix Sortable that does not work in IE

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -131,8 +131,8 @@ else
 
 
 @section Scripts {
-
-    <script src="~/js/Sortable.js"></script>
+    <!-- Does not work above version 1.10.2 on IE !-->
+    <script src="~/js/Sortable-1.10.2.js"></script>
     <script src="~/js/memoProgramComponent.js" type="text/javascript"></script>
 
 }
