--- a/src/Hosts/Quintessence.QCandidate.Web/Views/PdfProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/PdfProgramComponents/Details.cshtml
@@ -10,6 +10,11 @@
     </div>
 </div>
 
+@{
+    var language = User.Claims.SingleOrDefault(c => c.Type == "extension_Language").Value.ToLower();
+    System.Threading.Thread.CurrentThread.CurrentUICulture = System.Globalization.CultureInfo.GetCultureInfo(language);
+    System.Threading.Thread.CurrentThread.CurrentCulture = System.Globalization.CultureInfo.GetCultureInfo(language);
+}
 
 @if (Model.PdfExists)
 {
