update mail QCANDIDATE update QCandidate Memo: remove year from calendar

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -115,7 +115,7 @@
                     {
                         <div class="calendar-block">
                             <div class="calendar-date">
-                                @calendarDay.Day.ToString("D", CultureInfo.CurrentUICulture)
+                                @calendarDay.Day.ToString("dddd, MMMM dd", CultureInfo.CurrentUICulture)
                             </div>
                             <textarea class="calendar-text" onblur="saveCalendarDay(event, '@calendarDay.Id')" id="@calendarDay.Id">@calendarDay.Note</textarea>
                         </div>
