--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/Simulations.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/Simulations.cshtml
@@ -8,7 +8,8 @@
             <th style="width: 25%">Department</th>
             <th style="width: 15%">Level</th>
             <th style="width: 20%">Simulation</th>
-            <th style="width: 25%">Languages</th>
+            <th style="width: 20%">Languages</th>
+            <th style="width: 5%">Layout</th>
         </tr>
     </thead>
     <tbody>
@@ -24,6 +25,7 @@
                 <td>@Model[i].SimulationLevelName</td>
                 <td>@Model[i].SimulationName</td>
                 <td>@Model[i].LanguageNames</td>
+                <td>@(Model[i].QCandidateLayoutId == 0 ? "none" : Model[i].QCandidateLayoutId == 1 ? "pdf" : Model[i].QCandidateLayoutId == 2 ? "memo" : "")</td>
             </tr>
         }
     </tbody>
